fixes date misalignment

--- a/frontend/src/resume.css
+++ b/frontend/src/resume.css
@@ -24,6 +24,19 @@ ul {
 	padding-left: 3em
 }
 
+.profile-image {
+	border-radius:50px;
+	-webkit-box-shadow: 3px 4px 3px 0px #000000;
+	box-shadow: 3px 4px 3px 0px #000000;
+	margin-right: 1em;
+	margin-bottom: 0.5em;
+}
+
+.badge {
+	display:inline-block; 
+	padding:5px;
+}
+
 .skill-header {
 	font-weight: bold;
 	font-size: 1em;
